--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.038" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView_red"
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
         app:srcCompat="@drawable/red" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imageView_green"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginBottom="64dp"
@@ -44,7 +44,7 @@
         app:srcCompat="@drawable/green" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/imageView_blue"
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,14 +56,36 @@
         app:srcCompat="@drawable/blue" />
 
     <SeekBar
-        android:id="@+id/seekBar3"
+        android:id="@+id/seekBar_pion_red"
         android:layout_width="143dp"
         android:layout_height="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView5"
+        app:layout_constraintBottom_toTopOf="@+id/imageView_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_red"
         app:layout_constraintVertical_bias="0.448" />
+
+    <SeekBar
+        android:id="@+id/seekBar_pion_green"
+        android:layout_width="143dp"
+        android:layout_height="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView_blue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_green"
+        app:layout_constraintVertical_bias="0.433" />
+
+    <SeekBar
+        android:id="@+id/seekBar_pion_blue"
+        android:layout_width="143dp"
+        android:layout_height="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_blue"
+        app:layout_constraintVertical_bias="0.294" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
