--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:id="@+id/seekBar_vertical_red"
         android:layout_width="130dp"
         android:layout_height="135dp"
+        android:progress="50"
         android:rotation="90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +35,7 @@
         android:id="@+id/seekBar_horizontal_green"
         android:layout_width="143dp"
         android:layout_height="25dp"
+        android:progress="50"
         app:layout_constraintBottom_toTopOf="@+id/imageView_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.194"
@@ -82,6 +84,7 @@
         android:id="@+id/seekBar_vertical_green"
         android:layout_width="130dp"
         android:layout_height="135dp"
+        android:progress="50"
         android:rotation="90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +109,7 @@
         android:id="@+id/seekBar_horizontal_blue"
         android:layout_width="143dp"
         android:layout_height="25dp"
+        android:progress="50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.194"
@@ -117,6 +121,7 @@
         android:id="@+id/seekBar_horizontal_red"
         android:layout_width="143dp"
         android:layout_height="25dp"
+        android:progress="50"
         app:layout_constraintBottom_toTopOf="@+id/imageView_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.194"
@@ -128,6 +133,7 @@
         android:id="@+id/seekBar_vertical_blue"
         android:layout_width="130dp"
         android:layout_height="135dp"
+        android:progress="50"
         android:rotation="90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
